Init folder structure

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/OpenWorld
+GameDefaultMap=/Game/Levels/Main/L_Menu.L_Menu
+EditorStartupMap=/Game/Levels/Test/L_Sandbox.L_Sandbox
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
