--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,6 +2,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D744D37743FA74446B37DD80264B86B8
+ProjectName=Pulsar
+bAllowWindowResize=True
 
 [StartupActions]
 bAddPacks=True
@@ -9,3 +11,4 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
